# esp-idf-docs

./: .gitignore  README.md  README_SIMPLE_USAGE.md  pyproject.toml  test_search.py
.github/workflows/: CODEOWNERS  ci.yml  publish.yml
example_docs/: README.md
example_docs/api/: wifi.rst
src/esp_idf_docs_mcp/: __init__.py  config.py  exceptions.py  explorer.py  handlers.py  recommendations.py  server.py  util.py  web_explorer.py
tests/: conftest.py  test_comprehensive.py  test_explorer_integration.py  test_fastmcp_server.py  test_fixed.py  test_integration.py  test_minimal.py  test_online_explorer.py
