[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esp-idf-docs-mcp"
version = "0.1.0"
description = "ESP-IDF Documentation Explorer MCP Server"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
esp-idf-docs-mcp = "esp_idf_docs_mcp.server:run"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/esp_idf_docs_mcp"]