[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esp-idf-docs-mcp"
version = "0.1.5"
description = "ESP-IDF Documentation Explorer MCP Server"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "raihalea", email = "raihalea@users.noreply.github.com"},
]
keywords = ["esp-idf", "documentation", "mcp", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "fastmcp>=0.5.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/raihalea/esp-idf-docs"
Repository = "https://github.com/raihalea/esp-idf-docs.git"
Issues = "https://github.com/raihalea/esp-idf-docs/issues"

[project.scripts]
esp-idf-docs-mcp = "esp_idf_docs_mcp.server:run"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.12.3",
    "mypy>=1.16.0",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/esp_idf_docs_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
# Exclude auto-generated, vendored, or build directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

# Set the line length for formatting and linting
line-length = 100

# Set the target Python version
target-version = "py312"

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

# Allow autofix for specific rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Test files can have additional ignored rules
"tests/**/*.py" = [
    "D", # Don't require docstrings in tests
    "ARG", # Unused arguments are common in tests
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["esp_idf_docs_mcp"]
split-on-trailing-comma = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces around operators
indent-style = "space"

# Keep existing line endings
line-ending = "auto"

# Skip string normalization to avoid conflicts with existing code
skip-magic-trailing-comma = false